Quick fixes for rover deployment

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     image: byuawesomerover/marsrover_2.0:latest
     container_name: marsrover-ct
     build: 
-      context: ..
+      context: .
       dockerfile: Dockerfile
     user: marsrover-docker
     network_mode: host
