--- a/rover_ws/src/rover_gui/package.xml
+++ b/rover_ws/src/rover_gui/package.xml
@@ -11,6 +11,7 @@
   <depend>swri_transform_util</depend>
   <depend>tf2_ros</depend>
   <depend>nav2_bringup</depend>
+  <depend>rover_interfaces</depend>
 
   <export>
     <build_type>ament_python</build_type>
